# dinov2

./: flake.nix  pyproject.toml  requirements.txt
dinov2/configs/train/: vitl14_rxrx3_core.yaml
dinov2/data/: loaders.py
dinov2/data/datasets/: __init__.py  rxrx3_core.py
dinov2/run/: submit.py
dinov2/train/: ssl_meta_arch.py
notebooks/: inspect_dataset.ipynb
