[project]
name = "cellir"
version = "0.1.0"
description = "An intermediate reprenstation for cells"
readme = "README.md"
authors = [
    { name = "Ankur Kumar", email = "ank@leoank.me" }
]
requires-python = ">=3.10"
dependencies = [
  "triton",
  "setuptools",
  "matplotlib>=3.10.1",
  "pandas>=2.2.3",
  "cuda-python>=12.8.0",
  "omegaconf",
  "torchmetrics",
  "fvcore",
  "iopath",
  "xformers>0.0.18",
  "submitit",
  "datasets>=3.5.0",
]



[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cu124 = [
  "torch==2.4.0+cu124",
  "torchvision",
  "cuml-cu12"
]
dev = [
  "ipython",
  "marimo",
  "pytest",
  "ruff",
  "marimo"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
cuml-cu12 = [
  { index = "nvidia-cuml-cu12", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "nvidia-cuml-cu12"
url = "https://pypi.nvidia.com"
explicit = true

[project.scripts]
cellir = "cellir.cli:main"

[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"
